[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vizout2"
dynamic = ["version"]
authors = [
        {name = "Paul Brodersen", email = "paulbrodersen+vizout2@gmail.com"},
]
description = "A Python Matplotlib GUI to select outliers in tabular numerical data interactively."
readme = "README.md"
keywords = [
         "matplotlib",
         "outlier-detection",
         "visualisation",
]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
            "Development Status :: 4 - Beta",
            "Intended Audience :: Science/Research",
            "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
            "Operating System :: OS Independent",
            "Programming Language :: Python :: 3",
            "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">3.6"
dependencies = [
             "numpy",
             "matplotlib",
             "pandas",
]

[tool.setuptools.dynamic]
version = {attr = "netgraph.__version__"}
